All text-align to left in css. Changed director of show on hmtl

--- a/show-some-skin.css
+++ b/show-some-skin.css
@@ -64,15 +64,15 @@ hr {
 }
 
 .mission {
-	text-align: center;
+	text-align: left;
 }
 
 .your-help {
-	text-align:center;
+	text-align:left;
 }
 
 .we-do {
-	text-align:center;
+	text-align:left;
 }
 
 h1 {
