--- a/show-some-skin.css
+++ b/show-some-skin.css
@@ -19,6 +19,12 @@ hr {
 	color:#000000;
 }
 
+.video-thumbnail {
+	padding: 3px;
+	width: 100%;
+	height:272px;
+	max-height:auto;
+}
 .tile-1 {
 	float:right;
 	padding-top: 5px;
