--- a/show-some-skin.css
+++ b/show-some-skin.css
@@ -68,6 +68,8 @@ hr {
 	background-repeat: no-repeat;
 	background-position: right top;
 	background-color: #FFFFFF;
+	
+	width: 100%;
 }
 
 .mission {
