fixed css for .logo

--- a/show-some-skin.css
+++ b/show-some-skin.css
@@ -58,6 +58,7 @@ hr {
 	margin: 0px;
 }
 
+/*
 .logo {
 	font-family: 'Oswald',sans-serif;
 	text-align: left;
@@ -71,6 +72,7 @@ hr {
 	
 	width: 100%;
 }
+*/
 
 .mission {
 	text-align: left;
