css: switch font from oswald to raleway

--- a/full-size.css
+++ b/full-size.css
@@ -7,7 +7,7 @@ html {
 }
 
 .logo {
-	font-family: 'Oswald',sans-serif;
+	font-family: 'Raleway',sans-serif;
 	text-align: left;
 	width: 350px;
 	height: auto;
