css font switch from oswald to raleway

--- a/show-some-skin.css
+++ b/show-some-skin.css
@@ -88,7 +88,8 @@ hr {
 
 
 h1 {
-    font-family: 'Oswald',sans-serif;
+/*    font-family: 'Oswald',sans-serif; */
+    font-family: 'Raleway',sans-serif;
     font-weight:400;
     font-size: 50px;
     line-height: 55px;
